syntax = "proto2";
package message.product;
// 拼团列表请求
message PintuanUser {
    optional int64 id = 1; //拼团用户表id
    optional int64 user_id = 2; //参与拼团的用户id
    optional string nick_name = 3; //参与拼团的用户昵称
    optional string avatar_url = 4; //发起拼团的用户头像
    optional string create_at = 5; //创建时间
}
